Fixed enterprise z-index issue

--- a/resources/css/wiki.less
+++ b/resources/css/wiki.less
@@ -45,6 +45,9 @@
   }
 
   #wiki-page-edit {
+    .ProseMirror-menubar-wrapper {
+      z-index: 8;
+    }
     .ProseMirror {
       min-height: 150px !important;
     }
